# ProjectSchool

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md  run.sh
alloc/: CMakeLists.txt  Makefile  actix.sh  alloc_multithread.cpp  alloc_singlethread.cpp  build.sh
alloc/script/: build.sh  check.sh  start.sh  total.sh  visual.sh
alloc/src/: alloc_multithread.cpp  alloc_singlethread.cpp
alloc/test/: README.md
boost/: CMakeLists.txt  actix.sh  build.sh
boost/include/: multi_map.hpp  multi_pool.hpp  multi_vec.hpp  single_map.hpp  single_pool.hpp  single_vec.hpp
boost/script/: build.sh  check.sh  start.sh  total.sh
boost/src/: multi_map.cpp  multi_vec.cpp  single_map.cpp  single_pool.cpp
boost/src/map/multi/: boost.cpp  std.cpp
boost/src/map/single/: boost.cpp  std.cpp
boost/src/pool/multi/: boost.cpp  std.cpp
boost/src/pool/single/: boost.cpp  std.cpp
boost/src/vec/multi/: boost.cpp  std.cpp
boost/src/vec/single/: boost.cpp  std.cpp
original/: CMakeLists.txt  build.sh  multi_pool.cpp  multi_vec.cpp  single_pool.cpp  single_vec.cpp
original/src/: multi_pool.cpp  multi_vec.cpp  single_pool.cpp  single_vec.cpp
original/test/: README.md
prototype/: jemalloc_pt.hpp  malloc_pt.h  pool_pt.hpp  small_vector_pt.hpp
script/: chx.sh  found.sh  test.sh
setup/: install-arch.sh  install-debian.sh  install-deps.sh  install-fedora.sh  install-macos.sh  install-msys2.ps1  setup-env.bat
utilion/: constant.py  graph.py  valloc.py  vboost.py  visual.py
